crates/fundle_macros_impl/tests/snapshots/deps_errors__union.snap
---
source: crates/fundle_macros_impl/tests/deps_errors.rs
expression: expand_fundle_deps!(item)
---
::core::compile_error! {
    "expected `struct`"
}
